--- a/src/auth/Auth.css
+++ b/src/auth/Auth.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     width: 400px;
+    height: 480px;
     background-color: white;
     padding: 20px;
     border-radius: 8px;
@@ -80,8 +81,8 @@
 
 
 .login form{
-    height: 430px;
-    width: 370px;
+    height: 480px;
+    width: 400px;
 
     h1{
         margin: 30px auto 60px;
@@ -96,5 +97,52 @@
         margin-bottom: 20px;
         font-size: 16px;
         margin-top: 10px;
+    }
+}
+
+
+
+/*  Auth Root */
+
+.authroot{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f5f5;
+    font-family: sans-serif;
+
+
+    .authcontent{
+        width: 600px;
+        height: 450px;
+
+        h1{
+            margin-bottom: 30px;
+            margin-top: 30px;
+            font-size: 28px;
+            color: #105f83;
+            height: 50px;
+            line-height: 45px;
+        }
+
+        p{
+            margin: 80px 0px 10px;
+            font-size: 18px;
+        }
+
+        img{
+            width: 400px;
+            margin-bottom: 10px;
+            height: 200px;
+            object-fit: cover;
+        }
+    }
+
+    .authoutlet{
+        /* width: 400px;
+        height: 450px; */
+        background-color: white;
+
     }
 }
