--- a/src/auth/Auth.css
+++ b/src/auth/Auth.css
@@ -1,148 +1,171 @@
-
-.signup, .login , .registration {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #f5f5f5;
-    font-family: sans-serif;
+.signup,
+.login,
+.registration {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #f5f5f5;
+  font-family: sans-serif;
 }
 
+.signup form,
+.login form,
+.registration form {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 480px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-.signup form ,  .login form, .registration form{
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    height: 480px;
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  h1 {
+    margin-bottom: 20px;
+    margin: 20px auto;
+  }
 
-    h1 {
-        margin-bottom: 20px;
-        margin: 20px auto;
+  label {
+    margin-bottom: 5px;
+  }
+
+  input {
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+
+  button {
+    padding: 10px;
+    background-color: #2d0de0;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin: 10px 0;
+  }
+
+  button:hover {
+    background-color: #2adf12;
+    color: black;
+  }
+
+  p {
+    margin-top: 16px;
+    text-align: center;
+
+    a {
+      color: #053cf1;
+      text-decoration: none;
     }
 
-    label {
-        margin-bottom: 5px;
+    a:hover {
+      text-decoration: underline;
+      color: #f50909;
     }
-
-    input {
-        padding: 8px;
-        margin-bottom: 15px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        font-size: 16px;
-    }
-
-    button {
-        padding: 10px;
-        background-color: #2d0de0;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        font-size: 16px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-        margin: 10px 0;
-    }
-
-    button:hover {
-        background-color: #2adf12;
-        color: black;
-    }
-
-    p {
-        margin-top: 16px;
-        text-align: center;
-
-        a {
-            color: #053cf1;
-            text-decoration: none;
-        }
-
-
-        a:hover {
-            text-decoration: underline;
-            color: #f50909;
-        }
-    }
-
-    
-    
+  }
 }
 
+.login form {
+  height: 480px;
+  width: 400px;
 
+  h1 {
+    margin: 30px auto 60px;
+    font-size: 28px;
+  }
 
+  button {
+    margin: 20px 0;
+  }
 
-
-
-
-.login form{
-    height: 480px;
-    width: 400px;
-
-    h1{
-        margin: 30px auto 60px;
-        font-size: 28px;
-    }
-
-    button{
-        margin: 20px 0;
-    }
-
-    input{
-        margin-bottom: 20px;
-        font-size: 16px;
-        margin-top: 10px;
-    }
+  input {
+    margin-bottom: 20px;
+    font-size: 16px;
+    margin-top: 10px;
+  }
 }
-
-
 
 /*  Auth Root */
 
-.authroot{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #f5f5f5;
-    font-family: sans-serif;
+.authroot {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f5;
+  font-family: sans-serif;
 
+  .authcontent {
+    width: 600px;
+    height: 450px;
 
-    .authcontent{
-        width: 600px;
-        height: 450px;
-
-        h1{
-            margin-bottom: 30px;
-            margin-top: 30px;
-            font-size: 28px;
-            color: #105f83;
-            height: 50px;
-            line-height: 45px;
-        }
-
-        p{
-            margin: 80px 0px 10px;
-            font-size: 18px;
-        }
-
-        img{
-            width: 400px;
-            margin-bottom: 10px;
-            height: 200px;
-            object-fit: cover;
-        }
+    h1 {
+      margin-bottom: 30px;
+      margin-top: 30px;
+      font-size: 28px;
+      color: #105f83;
+      height: 50px;
+      line-height: 45px;
     }
 
-    .authoutlet{
-        /* width: 400px;
+    p {
+      margin: 80px 0px 10px;
+      font-size: 18px;
+    }
+
+    img {
+      width: 400px;
+      margin-bottom: 10px;
+      height: 200px;
+      object-fit: cover;
+    }
+  }
+
+  .authoutlet {
+    /* width: 400px;
         height: 450px; */
-        background-color: white;
+    background-color: white;
+  }
+}
 
+@media screen and (max-width: 480px) {
+  .authroot {
+    width: 100%;
+    height: max-content;
+    flex-direction: column;
+
+    .authcontent {
+      width: 80%;
+      height: max-content;
+
+      h1 {
+        margin-bottom: 10px;
+        margin-top: 30px;
+        font-size: 22px;
+      }
+
+      
+
+      img {
+        width: 300px;
+        height: 200px;
+        object-fit: cover;
+
+      }
     }
+
+    .authoutlet {
+      /* width: 400px;
+        height: 450px; */
+      background-color: white;
+    }
+  }
+
 }
