--- a/src/pages/Root.css
+++ b/src/pages/Root.css
@@ -63,6 +63,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100%;
   background-color: #fffcfc;
   font-family: sans-serif;
 }
@@ -252,4 +253,18 @@
       margin-bottom: 10px;
     }
   }
+}
+
+
+
+
+@media screen and (max-width:480px) {
+
+  .root {
+    display: flex;
+    flex-direction: column;
+  }
+
+    
+    
 }
